# structural_design_env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  demo.html  inference.py  openenv.yaml  pyproject.toml  server.py
pgsa_env/: client.py  environment.py  models.py
pgsa_env/server/: __init__.py  app.py  graders.py  physics_sim.py  task_generator.py
scripts/: inference.py  run_server.sh
server/: app.py  interactive_demo.html
structural_design_env/: __init__.py  env.py  graph.py  grid.py  models.py  reward.py  validation.py
structural_design_env/solver/: __init__.py  eurocode3.py  load_generator.py  redundancy.py  sections.py  seismic.py  stiffness_matrix.py
structural_design_env/tasks/: __init__.py  task1_warehouse.py  task2_office.py  task3_hospital.py
tests/: __init__.py  test_env.py  test_eurocode.py  test_graders.py  test_server_routes.py  test_stiffness.py
